@@ -550,7 +550,11 @@ GEN     FpXT_red(GEN z, GEN p);
 GEN     FpXV_prod(GEN V, GEN p);
 GEN     FpXV_red(GEN z, GEN p);
 int     Fq_issquare(GEN x, GEN T, GEN p);
+long    Fq_ispower(GEN x, GEN K, GEN T, GEN p);
 GEN     Fq_log(GEN a, GEN g, GEN ord, GEN T, GEN p);
+GEN     Fq_sqrtn(GEN a, GEN n, GEN T, GEN p, GEN *z);
+GEN     Fq_sqrt(GEN a, GEN T, GEN p);
+long    FqX_ispower(GEN f, ulong k, GEN T, GEN p, GEN *pt);
 GEN     FqV_inv(GEN x, GEN T, GEN p);
 GEN     Z_to_FpX(GEN a, GEN p, long v);
 GEN     gener_FpXQ(GEN T, GEN p, GEN *o);
@@ -2736,6 +2740,8 @@ GEN     FFM_mul(GEN M, GEN N, GEN ff);
 long    FFM_rank(GEN M, GEN ff);
 GEN     FFX_factor(GEN f, GEN x);
 GEN     FFX_roots(GEN f, GEN x);
+GEN     FqX_to_FFX(GEN x, GEN ff);
+GEN     Fq_to_FF(GEN x, GEN ff);
 GEN     Z_FF_div(GEN a, GEN b);
 GEN     ffgen(GEN T, long v);
 GEN     fflog(GEN x, GEN g, GEN o);
@@ -2897,6 +2903,7 @@ GEN     RgM_mulreal(GEN x, GEN y);
 GEN     RgX_RgM_eval_col(GEN x, GEN M, long c);
 GEN     RgX_cxeval(GEN T, GEN u, GEN ui);
 GEN     RgX_deflate_max(GEN x0, long *m);
+long    RgX_deflate_order(GEN x);
 long    RgX_degree(GEN x,long v);
 GEN     RgX_integ(GEN x);
 GEN     bitprecision0(GEN x,long n);
