@@ -1203,4 +1203,8 @@ x + 2
 1
 5
 51
-Total time spent: 3032
+[0, 1, 1, 1, 1, 1]
+[0, 1, 1, 1, 1, 1]
+[0, 1, 1, 1, 1, 1]
+[0, 1, 1, 1, 1, 1]
+Total time spent: 2584
